# cookiecutter-python-cli

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/tests/: test_main.py
